language/move-lang/tests/move_check/borrows/freeze_combo_invalid.exp
error: 

    ┌── tests/move_check/borrows/freeze_combo_invalid.move:12:23 ───
    │
 12 │         if (cond) f = &mut s.f else f = &mut other.f;
    │                       -------- Field 'f' is still being mutably borrowed by this reference
 13 │         freeze(s);
    │         ^^^^^^^^^ Invalid freeze.
    │

error: 

    ┌── tests/move_check/borrows/freeze_combo_invalid.move:19:23 ───
    │
 19 │         if (cond) f = &mut s.f else f = &mut s.g;
    │                       -------- Field 'f' is still being mutably borrowed by this reference
    │                                         -------- Field 'g' is still being mutably borrowed by this reference
 20 │         freeze(s);
    │         ^^^^^^^^^ Invalid freeze.
    │

error: 

    ┌── tests/move_check/borrows/freeze_combo_invalid.move:26:23 ───
    │
 26 │         if (cond) x = s else x = other;
    │                       - It is still being mutably borrowed by this reference
 27 │         freeze(s);
    │         ^^^^^^^^^ Invalid freeze.
    │

